[package]
name = "user-program"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.11"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "net", "signal"] }
anyhow = "1.0"
ebpf-program-common = { path = "../ebpf-program-common" }
clap = { version = "4.4.2", features = ["derive"] }

[workspace]
